tests/parser/parse-let.2.bad.error
error: Malformed let
  --> test:4:18
   |
 4 |  (define f (let ()))
   |                   ^ expected let body
